--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dylan Personal Site 🚀</title>
+    <title>Dylan's Personal Site 🚀</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -18,7 +19,8 @@
                 <h1>Dylan Villanueva</h1>
                 <p><em>Software Engineer</em></p>
                 <p>I'm a <a href="https://www.chelseafc.com/en">Chelsea F.C.</a> fan. I love <a
-                        href="https://www.monsterenergy.com/us/en/products/monster-ultra/zero-ultra">Monster Zero Ultra</a>.</p>
+                        href="https://www.monsterenergy.com/us/en/products/monster-ultra/zero-ultra">Monster Zero
+                        Ultra</a>.</p>
             </td>
         </tr>
     </table>
@@ -96,7 +98,7 @@
                     </tr>
                     <tr>
                         <td>CSS</td>
-                        <td>❌</td>
+                        <td>✅</td>
                     </tr>
                 </table>
             </td>
