--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         </thead>
         <tbody>
             <tr>
-                <td>May 2022 - November 2022</td>
-                <td>Telephone Interviewer at ReconMR</td>
+                <td>April 2021 - Current</td>
+                <td>Driver at Self-Employed</td>
             </tr>
             <tr>
-                <td>April 2021 - April 2022</td>
-                <td>Driver at Self-Employed</td>
+                <td>May 2022 - November 2022</td>
+                <td>Telephone Interviewer at ReconMR</td>
             </tr>
             <tr>
                 <td>September 2020 - March 2021</td>
