--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <td>
                 <h1>Dylan Villanueva</h1>
                 <p><em>Software Engineer</em></p>
-                <p>I'm a <a href="https://www.chelseafc.com/en">Chelsea F.C.</a> fan. I love <a
+                <p>I am a <a href="https://www.chelseafc.com/en">Chelsea F.C.</a> fan. I love <a
                         href="https://www.monsterenergy.com/us/en/products/monster-ultra/zero-ultra">Monster Zero
                         Ultra</a>.</p>
             </td>
