--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </td>
             <td>
                 <h1>Dylan Villanueva</h1>
-                <p><em>Software Engineer</em></p>
+                <p><em>Software Developer</em></p>
                 <p>I am a <a href="https://www.chelseafc.com/en">Chelsea F.C.</a> fan. I love <a
                         href="https://www.monsterenergy.com/us/en/products/monster-ultra/zero-ultra">Monster Zero
                         Ultra</a>.</p>
